# ratatui-ffi

./: .gitignore  Cargo.toml  README.md  UPGRADE_GUIDE.md  cbindgen.toml
.github/workflows/: ci.yml  publish.yml  release.yml
scripts/: ffi_capability_coverage.sh  ffi_introspect.sh
src/: lib.rs
src/ffi/: generated.rs  generated_enums.rs  generated_widgets.rs  headless_frame.rs  macros.rs  mod.rs  render.rs  safety.rs  terminal.rs  types.rs  util.rs
src/ffi/widgets/: barchart.rs  canvas.rs  chart.rs  clear.rs  gauge.rs  layout.rs  linegauge.rs  list.rs  logo.rs  mod.rs  paragraph.rs  scrollbar.rs  sparkline.rs  table.rs  tabs.rs
tools/: ffi_introspect.rs  gen_header.rs  gen_header.sh
