[package]
name = "ratatui_ffi"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "C ABI bindings for Ratatui (Rust TUI) to consume from C/C#/etc."
repository = "https://github.com/holo-q/ratatui-ffi"
homepage = "https://github.com/holo-q/ratatui-ffi"
readme = "README.md"
keywords = ["tui", "terminal", "ffi", "c", "bindings"]
categories = ["api-bindings", "command-line-interface", "gui"]

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "ffi_introspect"
path = "tools/ffi_introspect.rs"

[[bin]]
name = "gen_header"
path = "tools/gen_header.rs"

[features]
default = ["scrollbar" ]
# Enable experimental Scrollbar support (requires newer Ratatui API). Off by default for crates.io compatibility.
scrollbar = []

[dependencies]
ratatui = "0.29"
crossterm = "0.27"
bitflags = "2"

[package.metadata.docs.rs]
# Build docs with all features so optional APIs are visible.
all-features = true
# Enable `docsrs` cfg so `#[cfg_attr(docsrs, ...)]` works and feature badges render.
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
